<resources>
    <string name="app_name">FoodOrderApp</string>
    <string name="slogan">Tu comida favorita, rápido y ordenado.</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="btn_register">Registrar</string>

    //MenuCatalogo
    <string name="nuestro_menu">Menú</string>
    <string name="platillos">Platillos</string>
    <string name="postres">Postres</string>
    <string name="bebidas">Bebidas</string>


    //registro
    <string name="hint_nombre">Nombre</string>
    <string name="hint_fecha_nac">Fecha de Nacimiento</string>
    <string name="hint_correo">Correo Electrónico</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_mensaje">Escribe aquí tu mensaje</string>
    <string name="btn_enviar">Enviar</string>

    //carrito
    <string name="ver_carrito">Ver mi Carrito</string>
    <string name="total_carrito">Total: $0.00</string>
    <string name="mi_carrito">Mi Carrito</string>
    <string name="proceder_pago_carrito">Proceder al Pago</string>

    //dividir cuenta
    <string name="dividir_cuenta">Dividir Cuenta</string>
    <string name="asignar_persona">Asignando a: Persona 1</string>
    <string name="subtotal_persona">Subtotal Persona: $0.00</string>
    <string name="siguiente_persona">Siguiente Persona</string>


</resources>