<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="#E0E0E0"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/foodorderapp"
        android:scaleType="centerInside"
        android:contentDescription="Logo de la App"/>


    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="italic"
        android:textColor="#424242"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="48dp"/>


    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/naranja_primario"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:cornerRadius="12dp"
        app:elevation="6dp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistrar"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="@color/naranja_primario"
        app:strokeColor="@color/naranja_primario"
        app:strokeWidth="2dp"
        android:textSize="17sp"
        app:cornerRadius="12dp"
        android:backgroundTint="@android:color/transparent"/>

</LinearLayout>